@@ -1,10 +1,0 @@
-To get the pieces not included in this CVS tree, you need to run:
-	cvs co cvm
-	cvs co -d err lib/err
-	cvs co -d iobuf lib/iobuf
-	cvs co -d net lib/net
-	cvs co -d path lib/path
-	cvs co -d str lib/str
-	cvs co -d unix lib/unix
-You will also need a copy of SPAC in the path, available at:
-	http://untroubled.org/spac/
