@@ -1,10 +1,10 @@
 backend.a
 main.a
-path/path.a
-iobuf/iobuf.a
-net/socket.a
-unix/nonblock.a
-unix/sig.a
+-lpath/path
+-liobuf/iobuf
+-lnet/socket
+-lunix/nonblock
+-lunix/sig
+-lstr/iter
+-lstr/str
 socket.lib
-str/iter.a
-str/str.a
