@@ -23,8 +23,8 @@
 #include <unistd.h>
 #include "conf.h"
 #include "conf_bin.c"
-#include "iobuf/iobuf.h"
-#include "err/err.h"
+#include <iobuf/iobuf.h>
+#include <msg/msg.h>
 
 const char program[] = "twoftpd-conf";
 static const char usage_str[] =
